force-app/main/default/objects/pymtTest__Account_Credit__c/pymtTest__Account_Credit__c.object-meta.xml
<CustomObject>
    <description>Tracks credit balance on accounts from overpayments</description>
    <label>Account Credit</label>
    <nameField>
        <displayFormat>CR-{0000000}</displayFormat>
        <label>Credit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Credits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>