force-app/main/default/objects/pymtTest__Account_Credit__c/fields/pymtTest__Account__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account this credit belongs to</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Credits</relationshipLabel>
    <relationshipName>Account_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>