force-app/main/default/objects/pymtTest__Account_Credit__c/fields/pymtTest__Remaining_Balance__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Remaining_Balance__c</fullName>
    <description>Remaining credit balance available</description>
    <label>Remaining Balance</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>